fixed horizontal scrolling issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
+body {
+  overflow-x: hidden;
+}
+
 .card-header-icon {
   cursor: auto;
 }
